--- a/nginx/etc/calibre_site.conf
+++ b/nginx/etc/calibre_site.conf
@@ -3,8 +3,16 @@ server {
     server_name _;
     charset utf-8;
 
-    location /calibre-web {
-        proxy_pass              http://172.168.25.3:8083;
+    location /mgr {
+        proxy_pass              http://172.168.25.3:8080;
+        proxy_set_header        Host            $http_host;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Scheme        $scheme;
+        proxy_set_header        X-Script-Name   /calibre-web;
+    }
+
+    location /cms {
+        proxy_pass              http://172.168.25.4:8083;
         proxy_set_header        Host            $http_host;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Scheme        $scheme;
