--- a/calibre/mgr/Dockerfile
+++ b/calibre/mgr/Dockerfile
@@ -3,13 +3,16 @@
 FROM linuxserver/calibre:latest
 MAINTAINER EXP
 
+ARG USERNAME=admin
+ARG PASSWORD=admin123
+RUN PASS_MD5=`echo -n ${PASSWORD} | openssl md5`
+
+ENV GUAC_USER=${USERNAME}
+ENV GUAC_PASS=${PASS_MD5}
 ENV PUID=1000
 ENV PGID=1000
 ENV TZ=Aisa/Shanghai
 ENV UMASK_SET=022
-ENV GUAC_USER=admin
-ENV GUAC_PASS=0192023a7bbd73250516f069df18b500
-# echo -n admin123 | openssl md5
 
 EXPOSE 8080
 EXPOSE 8081
