--- a/nginx/etc/calibre_site.conf
+++ b/nginx/etc/calibre_site.conf
@@ -8,7 +8,7 @@ server {
         proxy_set_header        Host            $http_host;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Scheme        $scheme;
-        proxy_set_header        X-Script-Name   /calibre-web;
+        proxy_set_header        X-Script-Name   /mgr;
     }
 
     location /cms {
@@ -16,7 +16,7 @@ server {
         proxy_set_header        Host            $http_host;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Scheme        $scheme;
-        proxy_set_header        X-Script-Name   /calibre-web;
+        proxy_set_header        X-Script-Name   /cms;
     }
     
     location / {
