修正 proxy_pass 匹配模式

--- a/nginx/etc/calibre_site.conf
+++ b/nginx/etc/calibre_site.conf
@@ -3,20 +3,21 @@ server {
     server_name _;
     charset utf-8;
 
-    location /mgr {
-        proxy_pass              http://172.168.25.3:8080;
-        proxy_set_header        Host            $http_host;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        X-Scheme        $scheme;
-        proxy_set_header        X-Script-Name   /mgr;
+    location /mgr/ {
+        proxy_pass              http://172.168.25.3:8080/;
+        proxy_set_header        Host                $host;
+        proxy_set_header        X-Forwarded-For     $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Real-IP           $remote_addr;
+        proxy_set_header        Upgrade-Insecure-Requests 1;
+        proxy_set_header        X-Forwarded-Proto   http;
     }
 
     location /cms {
         proxy_pass              http://172.168.25.4:8083;
-        proxy_set_header        Host            $http_host;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        X-Scheme        $scheme;
-        proxy_set_header        X-Script-Name   /cms;
+        proxy_set_header        Host                $http_host;
+        proxy_set_header        X-Forwarded-For     $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Scheme            $scheme;
+        proxy_set_header        X-Script-Name       /cms;
     }
     
     location / {
