--- a/calibre/mgr/Dockerfile
+++ b/calibre/mgr/Dockerfile
@@ -4,8 +4,7 @@ FROM linuxserver/calibre:latest
 MAINTAINER EXP
 
 ARG USERNAME=admin
-ARG PASSWORD=admin123
-RUN PASS_MD5=`echo -n ${PASSWORD} | openssl md5`
+ARG PASS_MD5=0192023a7bbd73250516f069df18b500
 
 ENV GUAC_USER=${USERNAME}
 ENV GUAC_PASS=${PASS_MD5}
