--- a/data/.config/QtProject.conf
+++ b/data/.config/QtProject.conf
@@ -1,6 +1,6 @@
 [FileDialog]
-history=file:///config, file:///books/ebooks-library/\x8f7b\x5c0f\x8bf4/SAO
-lastVisited=file:///books/ebooks-library/\x8f7b\x5c0f\x8bf4/SAO
+history=file:///books/ebooks-library/\x60ac\x7591, file:///books/ebooks-library/\x60ac\x7591/\x9b3c\x5439\x706f, file:///books/ebooks-library/\x60ac\x7591/\x76d7\x5893\x7b14\x8bb0, file:///books/ebooks-library/\x7231\x60c5/\x90a3\x4e9b\x5e74\xff0c\x6211\x4eec\x4e00\x8d77\x8ffd\x7684\x5973\x5b69, file:///books/ebooks-library/\x90fd\x5e02, file:///books/ebooks-library/\x79d1\x5e7b/\x4e09\x4f53
+lastVisited=file:///books/ebooks-library/\x79d1\x5e7b/\x4e09\x4f53
 qtVersion=5.15.0
 shortcuts=file:, file:///config
 sidebarWidth=96
