--- a/data/.config/QtProject.conf
+++ b/data/.config/QtProject.conf
@@ -1,6 +1,6 @@
 [FileDialog]
-history=file:///books/ebooks-library/\x60ac\x7591, file:///books/ebooks-library/\x5176\x4ed6, file:///books/ebooks-library/\x4fee\x4ed9, file:///books/ebooks-library/\x4fee\x4ed9/\x51e1\x4eba\x4fee\x4ed9\x4f20, file:///books/ebooks-library/\x4fee\x4ed9/\x4ed9\x795e\x9b54\x5996\x9b3c, file:///books/ebooks-library/\x8f7b\x5c0f\x8bf4/Re0
-lastVisited=file:///books/ebooks-library/\x8f7b\x5c0f\x8bf4/Re0
+history=file:///books/ebooks-library/\x5176\x4ed6, file:///books/ebooks-library/\x4fee\x4ed9, file:///books/ebooks-library/\x4fee\x4ed9/\x51e1\x4eba\x4fee\x4ed9\x4f20, file:///books/ebooks-library/\x4fee\x4ed9/\x4ed9\x795e\x9b54\x5996\x9b3c, file:///books/ebooks-library/\x8f7b\x5c0f\x8bf4/Re0, file:///books/ebooks-library/\x8f7b\x5c0f\x8bf4/Accel World
+lastVisited=file:///books/ebooks-library/\x8f7b\x5c0f\x8bf4/Accel World
 qtVersion=5.15.0
 shortcuts=file:, file:///config
 sidebarWidth=96
