--- a/data/.config/QtProject.conf
+++ b/data/.config/QtProject.conf
@@ -1,6 +1,6 @@
 [FileDialog]
-history=file:///books/ebooks-library/\x4fee\x4ed9/\x51e1\x4eba\x4fee\x4ed9\x4f20, file:///books/ebooks-library/\x4fee\x4ed9/\x4ed9\x795e\x9b54\x5996\x9b3c, file:///books/ebooks-library/\x8f7b\x5c0f\x8bf4/Re0, file:///books/ebooks-library/\x8f7b\x5c0f\x8bf4/Accel World, file:///books/ebooks-library/\x8f7b\x5c0f\x8bf4/\x6b22\x8fce\x6765\x5230\x5b9e\x529b\x81f3\x4e0a\x4e3b\x4e49\x6559\x5ba4
-lastVisited=file:///books/ebooks-library/\x8f7b\x5c0f\x8bf4/\x6b22\x8fce\x6765\x5230\x5b9e\x529b\x81f3\x4e0a\x4e3b\x4e49\x6559\x5ba4
+history=file:///books/ebooks-library/\x8f7b\x5c0f\x8bf4/Re0, file:///books/ebooks-library/\x8f7b\x5c0f\x8bf4/Accel World, file:///books/ebooks-library/\x8f7b\x5c0f\x8bf4/\x6b22\x8fce\x6765\x5230\x5b9e\x529b\x81f3\x4e0a\x4e3b\x4e49\x6559\x5ba4, file:///books/ebooks-library/\x5b66\x672f, file:///books/ebooks-library/\x5176\x4ed6
+lastVisited=file:///books/ebooks-library/\x5176\x4ed6
 qtVersion=5.15.0
 shortcuts=file:, file:///config
 sidebarWidth=96
