--- a/data/.config/QtProject.conf
+++ b/data/.config/QtProject.conf
@@ -1,6 +1,6 @@
 [FileDialog]
-history=file:///books/ebooks-library/\x8f7b\x5c0f\x8bf4/Accel World, file:///books/ebooks-library/\x8f7b\x5c0f\x8bf4/\x6b22\x8fce\x6765\x5230\x5b9e\x529b\x81f3\x4e0a\x4e3b\x4e49\x6559\x5ba4, file:///books/ebooks-library/\x5b66\x672f, file:///books/ebooks-library/\x5176\x4ed6, file:///books/ebooks-library/\x8f7b\x5c0f\x8bf4/Fate, file:///books/ebooks-library/\x79d1\x5e7b
-lastVisited=file:///books/ebooks-library/\x79d1\x5e7b
+history=file:///books/ebooks-library/\x90fd\x5e02, file:///books/ebooks-library/\x4fee\x4ed9, file:///books/ebooks-library/\x67b6\x7a7a\x5386\x53f2, file:///books/ebooks-library/\x7384\x5e7b, file:///books/ebooks-library/\x6b66\x4fa0
+lastVisited=file:///books/ebooks-library/\x4fee\x4ed9
 qtVersion=5.15.0
 shortcuts=file:, file:///config
 sidebarWidth=96
