--- a/data/.config/QtProject.conf
+++ b/data/.config/QtProject.conf
@@ -1,6 +1,6 @@
 [FileDialog]
 history=file:///books/ebooks-library/\x90fd\x5e02, file:///books/ebooks-library/\x4fee\x4ed9, file:///books/ebooks-library/\x67b6\x7a7a\x5386\x53f2, file:///books/ebooks-library/\x7384\x5e7b, file:///books/ebooks-library/\x6b66\x4fa0
-lastVisited=file:///books/ebooks-library/\x4fee\x4ed9
+lastVisited=file:///books/ebooks-library/\x7384\x5e7b
 qtVersion=5.15.0
 shortcuts=file:, file:///config
 sidebarWidth=96
