修正文章属主

--- a/calibre/cms/Dockerfile
+++ b/calibre/cms/Dockerfile
@@ -3,8 +3,11 @@
 FROM linuxserver/calibre-web:latest
 MAINTAINER EXP
 
-ENV PUID=1000
-ENV PGID=1000
+ARG UID=1000
+ARG GID=1000
+
+ENV PUID=${UID}
+ENV PGID=${GID}
 ENV TZ=Aisa/Shanghai
 ENV DOCKER_MODS=linuxserver/calibre-web:calibre
 
