--- a/calibre/mgr/Dockerfile
+++ b/calibre/mgr/Dockerfile
@@ -5,11 +5,13 @@ MAINTAINER EXP
 
 ARG USERNAME=admin
 ARG PASS_MD5=0192023a7bbd73250516f069df18b500
+ARG UID=1000
+ARG GID=1000
 
 ENV GUAC_USER=${USERNAME}
 ENV GUAC_PASS=${PASS_MD5}
-ENV PUID=1000
-ENV PGID=1000
+ENV PUID=${UID}
+ENV PGID=${GID}
 ENV TZ=Aisa/Shanghai
 ENV UMASK_SET=022
 
