--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 # How to use :
-# username=admin pass_md5=0192023a7bbd73250516f069df18b500 docker-compose up -d
+# username=admin pass_md5=0192023a7bbd73250516f069df18b500 uid=1000 gid=1000 docker-compose up -d
 # docker-compose down
 # --------------------------------------------------------------------------------
 
@@ -27,6 +27,8 @@ services:
       context: ./calibre/mgr
       dockerfile: ./Dockerfile
       args:
+        - UID=${uid}
+        - GID=${gid}
         - USERNAME=${username}
         - PASS_MD5=${pass_md5}
     volumes:
@@ -49,6 +51,9 @@ services:
     build: 
       context: ./calibre/cms
       dockerfile: ./Dockerfile
+      args:
+        - UID=${uid}
+        - GID=${gid}
     volumes:
       - ./data/:/config/
       - ./books/:/books/
