--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@
   
   
     calibre_cms:
-      image: linuxserver/calibre-web:version-v5.6.0
+      image: linuxserver/calibre-web:version-0.6.12
       hostname: CALIBRE_CMS
       container_name: docker_calibre_cms
       environment:
