--- a/data/.config/QtProject.conf
+++ b/data/.config/QtProject.conf
@@ -1,6 +1,6 @@
 [FileDialog]
-history=file:///books/ebooks-library/\x4fee\x4ed9, file:///books/ebooks-library/\x67b6\x7a7a\x5386\x53f2, file:///books/ebooks-library/\x7384\x5e7b, file:///books/ebooks-library/\x6b66\x4fa0, file:///books
-lastVisited=file:///books
+history=file:///books/ebooks-library/\x4fee\x4ed9, file:///books/ebooks-library/\x67b6\x7a7a\x5386\x53f2, file:///books/ebooks-library/\x7384\x5e7b, file:///books/ebooks-library/\x6b66\x4fa0, file:///books, file:///books/ebooks-library/\x4fee\x4ed9/\x51e1\x4eba\x4fee\x4ed9\x4f20
+lastVisited=file:///books/ebooks-library/\x4fee\x4ed9/\x51e1\x4eba\x4fee\x4ed9\x4f20
 qtVersion=5.15.0
 shortcuts=file:, file:///config
 sidebarWidth=96
