--- a/data/.config/QtProject.conf
+++ b/data/.config/QtProject.conf
@@ -1,6 +1,6 @@
 [FileDialog]
-history=file:///books/ebooks-library/\x63a8\x7406/\x5c9b\x7530\x5e84\x53f8, file:///books/ebooks-library/\x63a8\x7406/\x5fa1\x624b\x6d17\x718a\x732b, file:///books/ebooks-library/\x63a8\x7406/\x7ea6\x7ff0\x30fb\x72c4\x514b\x68ee\x30fb\x5361\x5c14, file:///books/ebooks-library/\x63a8\x7406/\x963f\x52a0\x838e\x30fb\x514b\x91cc\x65af\x8482, file:///books/ebooks-library/\x63a8\x7406, file:///books/ebooks-library/\x7384\x5e7b
-lastVisited=file:///books/ebooks-library/\x7384\x5e7b
+history=file:///books/ebooks-library/\x63a8\x7406/\x5fa1\x624b\x6d17\x718a\x732b, file:///books/ebooks-library/\x63a8\x7406/\x7ea6\x7ff0\x30fb\x72c4\x514b\x68ee\x30fb\x5361\x5c14, file:///books/ebooks-library/\x63a8\x7406/\x963f\x52a0\x838e\x30fb\x514b\x91cc\x65af\x8482, file:///books/ebooks-library/\x63a8\x7406, file:///books/ebooks-library/\x7384\x5e7b, file:///config
+lastVisited=file:///config
 qtVersion=5.15.0
 shortcuts=file:, file:///config
 sidebarWidth=96
