--- a/data/.config/QtProject.conf
+++ b/data/.config/QtProject.conf
@@ -1,8 +1,8 @@
 [FileDialog]
-history=file:///books/ebooks-library/\x63a8\x7406/\x5fa1\x624b\x6d17\x718a\x732b, file:///books/ebooks-library/\x63a8\x7406/\x7ea6\x7ff0\x30fb\x72c4\x514b\x68ee\x30fb\x5361\x5c14, file:///books/ebooks-library/\x63a8\x7406/\x963f\x52a0\x838e\x30fb\x514b\x91cc\x65af\x8482, file:///books/ebooks-library/\x63a8\x7406, file:///books/ebooks-library/\x7384\x5e7b, file:///config
-lastVisited=file:///config
+history=file:///books/ebooks-library/\x63a8\x7406/\x7ea6\x7ff0\x30fb\x72c4\x514b\x68ee\x30fb\x5361\x5c14, file:///books/ebooks-library/\x63a8\x7406/\x963f\x52a0\x838e\x30fb\x514b\x91cc\x65af\x8482, file:///books/ebooks-library/\x63a8\x7406, file:///books/ebooks-library/\x7384\x5e7b, file:///config, file:///books/ebooks-library/\x6b66\x4fa0
+lastVisited=file:///books/ebooks-library/\x6b66\x4fa0
 qtVersion=5.15.0
 shortcuts=file:, file:///config
 sidebarWidth=96
-treeViewHeader=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2\x15\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\x1\x14\0\0\0\x1\0\0\0\0\0\0\0\x45\0\0\0\x1\0\0\0\0\0\0\0\x45\0\0\0\x1\0\0\0\0\0\0\0w\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
+treeViewHeader=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2\x15\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\x1\x14\0\0\0\x1\0\0\0\0\0\0\0\x45\0\0\0\x1\0\0\0\0\0\0\0\x45\0\0\0\x1\0\0\0\0\0\0\0w\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
 viewMode=Detail
