--- a/data/.config/QtProject.conf
+++ b/data/.config/QtProject.conf
@@ -1,6 +1,6 @@
 [FileDialog]
-history=file:///books/ebooks-library/\x63a8\x7406/\x7ea6\x7ff0\x30fb\x72c4\x514b\x68ee\x30fb\x5361\x5c14, file:///books/ebooks-library/\x63a8\x7406/\x963f\x52a0\x838e\x30fb\x514b\x91cc\x65af\x8482, file:///books/ebooks-library/\x63a8\x7406, file:///books/ebooks-library/\x7384\x5e7b, file:///config, file:///books/ebooks-library/\x6b66\x4fa0
-lastVisited=file:///books/ebooks-library/\x6b66\x4fa0
+history=file:///books/ebooks-library/\x63a8\x7406/\x963f\x52a0\x838e\x30fb\x514b\x91cc\x65af\x8482, file:///books/ebooks-library/\x63a8\x7406, file:///books/ebooks-library/\x7384\x5e7b, file:///config, file:///books/ebooks-library/\x6b66\x4fa0, file:///books/ebooks-library/\x4fee\x4ed9/\x8033\x6839\x4e94\x90e8\x66f2
+lastVisited=file:///books/ebooks-library/\x4fee\x4ed9/\x8033\x6839\x4e94\x90e8\x66f2
 qtVersion=5.15.0
 shortcuts=file:, file:///config
 sidebarWidth=96
