--- a/data/.config/QtProject.conf
+++ b/data/.config/QtProject.conf
@@ -1,8 +1,8 @@
 [FileDialog]
-history=file:///books/ebooks-library/\x63a8\x7406/\x963f\x52a0\x838e\x30fb\x514b\x91cc\x65af\x8482, file:///books/ebooks-library/\x63a8\x7406, file:///books/ebooks-library/\x7384\x5e7b, file:///config, file:///books/ebooks-library/\x6b66\x4fa0, file:///books/ebooks-library/\x4fee\x4ed9/\x8033\x6839\x4e94\x90e8\x66f2
-lastVisited=file:///books/ebooks-library/\x4fee\x4ed9/\x8033\x6839\x4e94\x90e8\x66f2
+history=file:///books/ebooks-library/\x63a8\x7406, file:///books/ebooks-library/\x7384\x5e7b, file:///config, file:///books/ebooks-library/\x6b66\x4fa0, file:///books/ebooks-library/\x4fee\x4ed9/\x8033\x6839\x4e94\x90e8\x66f2, file:///books/ebooks-library/\x63a8\x7406/\x5c9b\x7530\x5e84\x53f8
+lastVisited=file:///books/ebooks-library/\x63a8\x7406/\x5c9b\x7530\x5e84\x53f8
 qtVersion=5.15.0
 shortcuts=file:, file:///config
 sidebarWidth=96
-treeViewHeader=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2\x15\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\x1\x14\0\0\0\x1\0\0\0\0\0\0\0\x45\0\0\0\x1\0\0\0\0\0\0\0\x45\0\0\0\x1\0\0\0\0\0\0\0w\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
+treeViewHeader=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2\x15\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\x1\x14\0\0\0\x1\0\0\0\0\0\0\0\x45\0\0\0\x1\0\0\0\0\0\0\0\x45\0\0\0\x1\0\0\0\0\0\0\0w\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
 viewMode=Detail
