雪中悍刀行

--- a/data/.config/QtProject.conf
+++ b/data/.config/QtProject.conf
@@ -1,6 +1,6 @@
 [FileDialog]
-history=file:///books/ebooks-library/\x7384\x5e7b, file:///config, file:///books/ebooks-library/\x6b66\x4fa0, file:///books/ebooks-library/\x4fee\x4ed9/\x8033\x6839\x4e94\x90e8\x66f2, file:///books/ebooks-library/\x63a8\x7406/\x5c9b\x7530\x5e84\x53f8
-lastVisited=file:///books/ebooks-library/\x7384\x5e7b
+history=file:///config, file:///books/ebooks-library/\x6b66\x4fa0, file:///books/ebooks-library/\x4fee\x4ed9/\x8033\x6839\x4e94\x90e8\x66f2, file:///books/ebooks-library/\x63a8\x7406/\x5c9b\x7530\x5e84\x53f8, file:///books
+lastVisited=file:///books/ebooks-library/\x6b66\x4fa0
 qtVersion=5.15.0
 shortcuts=file:, file:///config
 sidebarWidth=96
